# muiti-app-workspace

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  md2word.py  pyproject.toml  requirements.txt  style_config.yaml  web_app.py
assets/: reference.docx  template_styles.md
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/md2word/: __init__.py  converter.py  env_loader.py  heading_analyzer.py  llm_front_matter_judge.py  llm_heading_judge.py  template_profiles.py
backend/tests/: test_helpers.py  test_main.py
docs/: adding-a-new-app.md  markdown-output-spec.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/nginx/: default.conf
frontend/src/: App.tsx  styles.css
frontend/src/apps/md2word/: Md2WordApp.tsx
frontend/src/test/: Md2WordApp.test.tsx
release/: docker-compose.yml
test/: docs_sample.md  output_cli.docx  spec_test.md
