[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md2word"
version = "0.2.0"
description = "Convert Markdown to Word (.docx) with CLI and Web interfaces"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "docxtpl",
  "docxcompose",
  "python-docx",
  "markdown",
  "beautifulsoup4",
  "flask",
]

[project.scripts]
md2word = "md2word:main"
md2word-web = "web_app:main"

[tool.setuptools]
py-modules = ["md2word", "web_app"]
include-package-data = true
